--- a/VRChat/38/1068538.html
+++ b/VRChat/38/1068538.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/rlFVqk6sLLdD7TKXWGgR8YOfo4n26Hv6P40de+2oSw="></script>
+    "o7VnaoInzKf4QiMNbBNAgUS+SuY8wpQsGH4oHZ013jc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けアクセサリー　てけあめりあ","description":"・2018年12月30日更新\nVRchat最新版でてけあめりあをアップロードできない不具合を修正しました。\n\n・2020年4月2日更新\nVRChatのアップデートに対応するためにshaderをReflex Shader 2.2.0に変更・2バイト文字が入っていた事の修正を行いました。\n\n■アバターに付けたりワールドに置いたりできる小動物です。\nヒューマノイドリグが入っておりますが、あくまで小物としてのアニメーション用です。\n\n■専用待機モーションが6種類と耳用モーション・尻尾用モーション・目用モーションが入っています。\n\n■Material数2（目・体）\n色変えテクスチャ5種類と、改変用テクスチャが入っています。\n\n■アニメーションセットアップ済みなので、青い四角いアイコンをヒエラルキーにドラッグアンドドロップするだけでアニメーションします。\n\n■入っているprefab（青い四角いアイコン）一覧\n\n・Yellow　white　Black　Browngray\nアニメーションがセットアップされたてけあめりあです。\nその場で様々なアニメーションをします。\n\n・Ride\n前足で何かに乗っかっているモーションが入っています。\n※unity上と再生時で位置が違いますので、調整してお使い下さい。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nshaderのみの利用\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\nパブリックワールドへの使用\n（一報いただけると励みになります）\nてけあめりあ用のオリジナルアイテム（首輪・アクセサリー等）を作成して配布・販売する事\n\n※改変データの再配布は不可です\n※ヒューマノイドリグが入っていますが、アバターとしての使用は想定していない作りになっています。\n\n※このモデルには、\nKemoIrisShader：https://twitter.com/nD_ntny/status/1009355736277630976（Twitter：@nD_ntny様作）\nReflex Shader 2.2.0：https://booth.pm/ja/items/1088971（Twitter：@reflex_1124　様作）が利用されています。","url":"https://booth.pm/ja/items/1068538","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1068538/4cfff672-95ef-4ce1-9d42-b1b6cfc9526f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/rlFVqk6sLLdD7TKXWGgR8YOfo4n26Hv6P40de+2oSw="></script>
+    nonce="o7VnaoInzKf4QiMNbBNAgUS+SuY8wpQsGH4oHZ013jc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
