--- a/VRChat/48/1067748.html
+++ b/VRChat/48/1067748.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jITIxpjnk4kGXeEadsS++0FfKPIGLlY/NdnTRpod234="></script>
+    "z6nqFxXxJC5ESpn5b2Z3UfL1Tf7ElQBbkXl1bnhulgs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Ver.3.00】３Dモデル「空々式 狐耳尻尾」","description":"※サムネ・画像・動画に使用されている、狐耳・尻尾を除く3Dモデル・3Dアバターは、使用例であり、同梱されていません。\n画像で使用しているアバターは以下の通りです\n・ポンデロニウム研究所様の3Dアバター「桔梗」\nhttps://booth.pm/ja/items/3681787\n・むたチャンネル販売所様の3Dアバター「キッシュ」\nhttps://booth.pm/ja/items/954376","url":"https://booth.pm/ja/items/1067748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1067748/ca6ac231-92cc-4db5-a3bc-e21835406a8c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jITIxpjnk4kGXeEadsS++0FfKPIGLlY/NdnTRpod234="></script>
+    nonce="z6nqFxXxJC5ESpn5b2Z3UfL1Tf7ElQBbkXl1bnhulgs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      864
+                                      868
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      864
+                                      868
                                     </div>
                                   </div></a>
                                 </div>
@@ -518,9 +518,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
