--- a/VRChat/43/1067643.html
+++ b/VRChat/43/1067643.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hfosrVWYNsnQ6VSS9ppbNP5j8K5YQhLJSoqFaIvsSBE="></script>
+    "AIXfNm7/HyObdf6Dts21RJaKfdLxSM7GpYGiOSoPGJU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　PP-02 パルスレーザーピストル","description":"□コンパクトなパルスレーザーピストルの3Dモデルです。\n954△ポリゴン。\nカラーリング11種類、発光色4種類のテクスチャが付属。\n\n\n□内容\n・PP-02.fbx　本体\n\n・PP-02.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・サムネ類フォルダ　サムネ類画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weapon/PP-02フォルダに作成されます。\n\nレーザーサイト風のオブジェクトが付属しています。\n使用する際は、PP-02.prefabをHierarchy上に配置した後、PP-02の子にあるLaserSightオブジェクトの中に、\n更にLaserSight.prefabを配置して下さい。\nかなり長いので注意。\n\n\n□設定等\n\n　護身用、或いは非常用等の用途を主眼に設計された小型のパルスレーザー発射装置。\n内蔵式のバッテリーを備え、満充電で30発の発射が可能。\nバッテリーを固定化した事や、レーザー照準器以外の照準器の省略、安全装置を旧来の握り込み式グリップセーフティに\n絞った事等により、安価でありつつも粗悪な護身用火器などより遥かに信頼出来る製品となっている。\n　外見上は、通常火器であれば銃口にあたる部分にレーザー照準器を設置し、その下にパルスレーザー照射部が位置する\n上下逆転配置が特徴的。\n\n\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/10/25：販売開始","url":"https://booth.pm/ja/items/1067643","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1067643/6c0519c3-7c81-4c75-b625-8b9c01a0ac72_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hfosrVWYNsnQ6VSS9ppbNP5j8K5YQhLJSoqFaIvsSBE="></script>
+    nonce="AIXfNm7/HyObdf6Dts21RJaKfdLxSM7GpYGiOSoPGJU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -630,9 +630,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
