--- a/VRChat/25/1067325.html
+++ b/VRChat/25/1067325.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZqkYQKss43CjKs2YUaj9/7JQAnYx0tvnl1m3uqWQ+0w="></script>
+    "H28bGW0bRbnOXzBWob8qM6YejrmVDfgeO73k0fespaA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター用アクセサリ】ヘッドフォンSTRAC004-HP","description":"【VRアバター用アクセサリ】ヘッドフォンSTRAC004-HP\n\n◆モデル概要◆\n\nモデル型式:STRAC004-HP\n作者:倭文(しとり)\n\n\n◆仕様◆\n・ポリゴン数△1,784(ハイポリモデル△2,948)\n・5色展開。\n・シェーダーはそれぞれUTS2とスタンダードシェーダーの2種類を適用したモデルを用意しています。\n\n\n今回のモデルは、主にVRChatでの使用を想定しています。\nVRChat用アバターに装着する手順は、STRAC001-E(ピアス)とほぼ同じとなりますので、そちらの導入説明書をご覧下さい。\n\n導入説明書は↓こちら\nhttp://toy-box.link/downloaddata/piercemanual.pdf\n\n\n◆同梱してある使用シェーダーについて◆\n【ユニティちゃんトゥーンシェーダー2.0】\n\n最新バージョンのシェーダは以下からダウンロードできます。\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\nGithub: https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project/blob/master/Manual/UTS2_Manual_ja.md\n\n\n◆必須前提◆\nUnity(バージョンはVRChat推奨のもの)\nVRChatSDK\n\n\n◆禁止事項◆\n\n『未加工での再配布・販売を禁じます』\n　※著作権は放棄しておりません。\n\nクレジット表記の必要はありませんが、表記していただけると作者が喜びますw\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\nモデルデータ(unityパッケージ・シェーダ込み/別の2種類)\nfbxデータ(strac004-hp.fbx/strac004-hp-hi.fbx)\nテクスチャPNGデータ(5色)\nreadme.txt\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n\n◆修正履歴◆\n\n◇2019.12.22◇\nVer.3.0.0 シェーダーをUTS2.0に変更しました。\n\n◇2018.11.22◇\nVer.2.0.0 ポリゴン数を削減。既存モデルはハイポリモデルとして同梱。\n\n◇2018.10.25◇\nVer.1.0.0 販売開始","url":"https://booth.pm/ja/items/1067325","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/1067325/58570f12-e3c3-4d05-9b73-1309f5af97e4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZqkYQKss43CjKs2YUaj9/7JQAnYx0tvnl1m3uqWQ+0w="></script>
+    nonce="H28bGW0bRbnOXzBWob8qM6YejrmVDfgeO73k0fespaA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
