--- a/VRChat/42/1066842.html
+++ b/VRChat/42/1066842.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ah+doGhMhIeZZ6WIvUDFGNa5N5iLewXMXj67MqNgxXY="></script>
+    "xp8B/eYmj2YwxwR9WezflLe+EgG0KTWnK83BVtQ4nVQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けレイマーチング3Dスキャナー","description":"Unity2019まで動作確認してあります。Unityのバージョン更新によって動かなくなった場合にサポートはしかねます。対応した場合は告知します。\n\n---注意---\nレイマーチングの負荷はそこそこ重いです。特に、オブジェクトの画面専有率で大きく変わります。重いワールドでは使用しない等の配慮をお願いします。\n-------------\n\nレイマーチングを用いた3Dスキャナーです。\nVRChatに使用することを想定しています。\nそれ以外でも使用できます。\n詳しくは同梱のREADME.txtをおよみください。\n\n既存の3Dスキャナーの実装（vertexシェーダー、テッセレーション、geometryシェーダーを用いたもの)に比べると、比較的低負荷ではあります。（それでもそれなりには重いですが）低解像度のカメラで広い描画範囲でもそれなりにきれいに出ます。描画範囲が小さい方が軽くなります。\n\nDirectional Lightがないとおかしくなるようです。Occulusion Cullingを切ったら正常になりました。\n\n---2018/10/27 8:12---\nシェーダーを更新しました。\n---2022/08/04 10:18---\nシェーダーを軽量化・改良しました。\n保存機能を追加しました。\n---2022/08/05 04:49---\n修正したい。\n--------------------------","url":"https://booth.pm/ja/items/1066842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1066842/08f855a2-2938-4bb9-9d20-b383e9cc39b4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ah+doGhMhIeZZ6WIvUDFGNa5N5iLewXMXj67MqNgxXY="></script>
+    nonce="xp8B/eYmj2YwxwR9WezflLe+EgG0KTWnK83BVtQ4nVQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
