--- a/VRChat/72/1066072.html
+++ b/VRChat/72/1066072.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "AIntBtSn/MJmPb2b/uiFW0ZzfyCHJTyZ+otPpqAPGlU="></script>
+    "mpe+nm6XU+fs7P1THsf/MktZqxIoQktGNrpGav4qaBk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF デリンジャー スリーブガン","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n飛び出すデリンジャー！\nシャキンと伸びる！以上！！\nモデルは三つ同梱。シェイプキー付きとそうでないショートタイプ、あとボーン付きのデリンジャー。\n\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nMCF デリンジャー スリーブガン仕様:716\nMCF デリンジャー スリーブガン仕様ショートシェイプキー無し：594\nMCF デリンジャー:836\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1066072","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1066072/f69e93a2-ee79-44e0-87ec-e185bffc2a2b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AIntBtSn/MJmPb2b/uiFW0ZzfyCHJTyZ+otPpqAPGlU="></script>
+    nonce="mpe+nm6XU+fs7P1THsf/MktZqxIoQktGNrpGav4qaBk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
