--- a/VRChat/54/1065354.html
+++ b/VRChat/54/1065354.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8WSI4g+yVPSygl6Arj7pYnjOaXD+VlxflNVCCDx9mCo="></script>
+    "Re1tIPp765HtP+ETx6V/aRpRAA0RsOceECxwNU9Mg8M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】スルトの剣","description":"ご購入されてVRChatで使用された方は、twitterで@tuneken_workにスクショを送っていただけると作者が喜びます！\n\n【商品説明】\n北欧神話の炎の巨人・スルトをイメージして作成した炎の剣です。\n\nEmissionによって発光するアニメーションが含まれています。\nまた、デフォルトパーティクルで作成した簡単な火の粉エフェクトも付属しています。\n\nマテリアルはデフォルトを使用しています。\n\n【含まれる物】\nUnitypackage\n -武器モデル本体のFBX\n -武器モデル本体のPrefab\n -カラーマップ\n -エミッションマップ\n -アニメーションデータ（発光）\n -火の粉エフェクト（本体Prefabに内蔵）\n\n\n【使用に関する注意】\n・モデル、テクスチャ、エフェクトの改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n・VRChatで使用することを想定していますが、Vtuber等の動画コンテンツ、同人ゲーム等での使用も可能です。\n","url":"https://booth.pm/ja/items/1065354","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/c43583ad-31e1-4ed9-9a1e-3c3f8648877c/i/1065354/d06029c8-01b1-4a82-9bb8-2eb70b6f66a3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8WSI4g+yVPSygl6Arj7pYnjOaXD+VlxflNVCCDx9mCo="></script>
+    nonce="Re1tIPp765HtP+ETx6V/aRpRAA0RsOceECxwNU9Mg8M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -422,9 +422,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
